# rag-benchmarks

./: .bumpversion.cfg  AUTHORS.rst  CONTRIBUTING.rst  README.rst  pyproject.toml  tasks.py
.github/: ISSUE_TEMPLATE.md
docs/: conf.py  index.rst  installation.rst  usage.rst
rag_benchmarks/: __init__.py  cli.py  main.py
rag_benchmarks/generation/: query_loop.py
rag_benchmarks/retrieval/: chains.py
rag_benchmarks/streamlit/: streamlit_app.py
tests/: __init__.py  test_rag_benchmarks.py
