[tool]
[tool.poetry]
name = "rag_benchmarks"
version = "0.1.0"
homepage = "https://github.com/jfrazier312/rag_benchmarks"
description = "Top-level package for rag_benchmarks."
authors = ["Jordan Frazier <email@example.com>"]
readme = "README.rst"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "rag_benchmarks" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
# note altair 4.0.0 (or <5?) needed for streamlit to work
python = ">=3.9,<3.12"
python-dotenv = "^0.19.1"
ragstack-ai = "0.4.0"
datasets = "*"
click = "*"

[tool.poetry.dependencies.streamlit]
version = "1.29.0"
python = ">=3.8, !=3.9.7"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = ">=7.2.0"
sphinx = ">=5.3.0"
black = "*"

[tool.poetry.scripts]
rag_benchmarks = 'rag_benchmarks.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
